--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,10 +1,238 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% load static %}
+<!doctype html>
+<html class="no-js" lang="ru">
 
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="x-ua-compatible" content="ie=edge">
+   <title>{% block title %}{% endblock %}</title>
+   <meta name="description" content="">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+   <!-- Place favicon.ico in the root directory -->
+   <link rel="shortcut icon" type="image/x-icon" href="{% static 'main/img/logo/favicon.png' %}">
+
+   <!-- CSS here  -->
+   <link rel="stylesheet" href="{% static 'main/css/bootstrap.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/meanmenu.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/animate.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/slick.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/magnific-popup.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/nice-select.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/font-awesome-pro.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/elegent-icons.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/spacing.css' %}">
+   <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+   <!-- css end  here-->
+</head>
+
+<body>
+   <!--[if lte IE 9]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+      <![endif]-->
+
+   <!-- pre loader area start -->
+   <div class="tp-preloader">
+      <div class="tp-preloader__center">
+         <span>
+            <svg width="170" height="132" viewBox="0 0 170 132" fill="none" xmlns="http://www.w3.org/2000/svg">
+               <g clip-path="url(#clip0_6_12)">
+               <path d="M113.978 61.1738L55.4552 2.8186C52.8594 0.230266 48.7298 0.230266 46.252 2.8186L1.88784 46.4673C-0.707934 49.0557 -0.707934 53.1735 1.88784 55.6441L14.5127 68.2329L66.9002 120.353L113.86 75.7626C118.108 71.8801 118.108 65.2916 113.978 61.1738Z" fill="black"/>
+               <path d="M167.781 51.5263L90.2621 129.059C86.1325 133.177 79.6431 133.177 75.5134 129.059L31.6212 85.2923C35.7509 89.4101 42.2403 89.4101 46.37 85.2923L123.889 7.75996C126.485 5.17163 130.615 5.17163 133.092 7.75996L167.663 42.2319C170.377 44.8202 170.377 48.938 167.781 51.5263Z" fill="#5392FB"/>
+               <path d="M74.9235 35.0551C76.6933 36.8199 78.4632 38.467 79.9971 39.8788C82.1209 41.6436 82.2389 44.8202 80.233 46.8203L48.8478 78.1156C44.1282 82.8217 36.4588 82.8217 31.7392 78.1156C27.0197 73.4095 27.0197 65.7622 31.7392 61.0561L63.1245 29.7608C65.1303 27.7607 68.3161 27.8784 70.0859 29.9961C71.5018 31.5256 73.1536 33.2904 74.9235 35.0551Z" fill="currentColor" class="path-yellow"/>
+               </g>
+               <defs>
+               <clipPath id="clip0_6_12">
+               <rect width="169.787" height="131.064" fill="white" transform="translate(0 0.936172)"/>
+               </clipPath>
+               </defs>
+               </svg>
+
+         </span>
+      </div>
+   </div>
+   <!-- pre loader area end -->
+
+    <!-- back to top start -->
+    <button class="tp-backtotop">
+      <span><i class="fal fa-angle-double-up"></i></span>
+   </button>
+   <!-- back to top end -->
+
+
+   <!-- header area start -->
+   <header>
+      <div class="tp-header__area tp-header__transparent">
+         <div class="tp-header__main" id="header-sticky">
+            <div class="container">
+               <div class="row align-items-center">
+                  <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-6 col-6">
+                     <div class="logo has-border">
+                        <a href="index.html">
+                           <img src="{% static 'main/img/logo/white-logo.png' %}" alt="logo">
+                        </a>
+                     </div>
+                  </div>
+                  <div class="col-xxl-6 col-xl-6 col-lg-7 d-none d-lg-block">
+                     <div class="main-menu">
+                        <nav id="mobile-menu">
+                           <ul>
+                              <li>
+                                 <a href="index.html">Главная страница</a>
+                              </li>
+                              <li>
+                                 <a href="about-us.html">О нас</a>
+                              </li>
+                              <li class="has-dropdown">
+                                 <a href="course.html">Курсы</a>
+                                 <ul class="submenu">
+                                    <li><a href="course-list.html">Courses List</a></li>
+                                    <li><a href="course.html">Courses Grid</a></li>
+                                    <li><a href="course-details.html">Course Details</a></li>
+                                    <li><a href="cart.html">Cart</a></li>
+                                    <li><a href="checkout.html">Checkout</a></li>
+                                 </ul>
+                              </li>
+                              <li>
+                                 <a href="blog.html">Блог</a>
+                              </li>
+                              <li>
+                                 <a href="contact.html">Контакты</a>
+                              </li>
+                           </ul>
+                        </nav>
+                     </div>
+                  </div>
+                  <div class="col-xxl-4 col-xl-4 col-lg-3 col-md-6 col-6">
+                     <div class="tp-header__main-right d-flex justify-content-end align-items-center pl-30">
+                        <div class="header-acttion-btns d-flex align-items-center d-none d-md-flex">
+                           <a href="tel:+375(29)0000000" class="tp-phone-btn d-none d-xl-block"><i class="fa-thin fa-phone"></i>+375 (29) 000
+                              00 00<span></span></a>
+                           <a href="contact.html" class="tp-btn br-0">
+                              <span>Записаться на курсы прямо сейчас <i class="fa-regular fa-arrow-right"></i> </span>
+                              <div class="transition"></div>
+                           </a>
+                        </div>
+                        <div class="tp-header__hamburger ml-50 d-lg-none">
+                           <button class="hamburger-btn offcanvas-open-btn">
+                              <span></span>
+                              <span></span>
+                              <span></span>
+                           </button>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </header>
+   <!-- header area end -->
+   {% block content %}{% endblock %}
+   <!-- footer area start -->
+   <footer>
+   <div class="footer__area grey-bg">
+      <div class="container">
+         <div class="footer__top ">
+            <div class="row">
+               <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6">
+                  <div class="footer__widget mb-50 footer-col-1">
+                     <div class="footer__widget-logo mb-30">
+                       <a href="index.html"><img src="{% static 'main/img/logo/logo.png' %}" alt=""></a>
+                     </div>
+                     <div class="footer__widget-content">
+                        <p>Подписывайся и следи за
+                           нами в социальных сетях.
+                        </p>
+                        <div class="footer__social">
+                           <span><a href="#"><i class="fab fa-facebook-f"></i></a></span>
+                           <span><a href="#" class="yt"><i class="fab fa-youtube"></i></a></span>
+                           <span><a href="#" class="tw"><i class="fab fa-twitter"></i></a></span>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-xxl-2 col-xl-2 col-lg-3 col-6">
+                  <div class="footer__widget mb-50 footer-col-2">
+                     <h3 class="footer__widget-title">Информация</h3>
+                     <div class="footer__widget-content">
+                        <ul>
+                           <li><a href="#">О нас</a></li>
+                           <li><a href="#">Карьера</a></li>
+                           <li><a href="#">Клиент</a></li>
+                           <li><a href="#">Конфиденциальность</a></li>
+                           <li><a href="#">Сервис</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-xxl-3 col-xl-3 col-lg-3 col-6">
+                  <div class="footer__widget mb-50 footer-col-3">
+                     <h3 class="footer__widget-title">Курсы</h3>
+                     <div class="footer__widget-content">
+                        <ul>
+                           <li><a href="#">Masters Degree</a></li>
+                           <li><a href="#">Post GraduateU</a></li>
+                           <li><a href="#">Ndergraduate</a></li>
+                           <li><a href="#">Engineering</a></li>
+                           <li><a href="#">Ph.D Degree</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="col-xxl-4 col-xl-4 col-lg-3 col-md-6">
+                  <div class="footer__widget mb-50 footer-col-4">
+                     <h3 class="footer__widget-title">Подпишитесь на нашу рассылку</h3>
+                     <div class="footer__widget-content">
+                        <div class="footer__subscribe">
+                           <p>Получайте еженедельную рассылку с образовательными,
+                              популярными книгами и многим другим!</p>
+                           <form action="#">
+                              <div class="footer__subscribe-box">
+                                 <div class="footer__subscribe-input">
+                                    <input type="email" placeholder="Email address">
+                                 </div>
+                                 <button class="footer-sub-btn" type="submit">Подписаться</button>
+                              </div>
+                           </form>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="footer__bottom">
+            <div class="row">
+               <div class="col-12">
+                  <div class="footer__copyright text-center">
+                     <p> © 2025 ITSchool, All Rights Reserved. Design By <a href="https://themeforest.net/user/theme_pure/portfolio" target="_blank">Theme Pure</a></p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   </footer>
+   <!-- footer area end -->
+
+
+   <!-- JS here -->
+   <script src="{% static 'main/js/vendor/jquery.js' %}"></script>
+   <script src="{% static 'main/js/vendor/waypoints.js' %}"></script>
+   <script src="{% static 'main/js/bootstrap-bundle.js' %}"></script>
+   <script src="{% static 'main/js/meanmenu.js' %}"></script>
+   <script src="{% static 'main/js/slick.js' %}"></script>
+   <script src="{% static 'main/js/magnific-popup.js' %}"></script>
+   <script src="{% static 'main/js/parallax.js' %}"></script>
+   <script src="{% static 'main/js/nice-select.js' %}"></script>
+   <script src="{% static 'main/js/counterup.js' %}"></script>
+   <script src="{% static 'main/js/wow.js' %}"></script>
+   <script src="{% static 'main/js/isotope-pkgd.js' %}"></script>
+   <script src="{% static 'main/js/imagesloaded-pkgd.js' %}"></script>
+   <script src="{% static 'main/js/ajax-form.js' %}"></script>
+   <script src="{% static 'main/js/countdown.js' %}"></script>
+   <script src="{% static 'main/js/main.js' %}"></script>
 </body>
+
 </html>
