add teacher view, courses view

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -86,7 +86,7 @@
                               <li class="has-dropdown">
                                  <a href="course.html">Курсы</a>
                                  <ul class="submenu">
-                                    <li><a href="course-list.html">Courses List</a></li>
+                                    <li><a href="{% url 'courses' %}">Курсы</a></li>
                                     <li><a href="course.html">Courses Grid</a></li>
                                     <li><a href="course-details.html">Course Details</a></li>
                                     <li><a href="cart.html">Cart</a></li>
