--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -81,7 +81,7 @@
                                  <a href="index.html">Главная страница</a>
                               </li>
                               <li>
-                                 <a href="about-us.html">О нас</a>
+                                 <a href="#">О нас</a>
                               </li>
                               <li class="has-dropdown">
                                  <a href="course.html">Курсы</a>
@@ -106,8 +106,7 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-3 col-md-6 col-6">
                      <div class="tp-header__main-right d-flex justify-content-end align-items-center pl-30">
                         <div class="header-acttion-btns d-flex align-items-center d-none d-md-flex">
-                           <a href="tel:+375(29)0000000" class="tp-phone-btn d-none d-xl-block"><i class="fa-thin fa-phone"></i>+375 (29) 000
-                              00 00<span></span></a>
+                           <a href="tel:+375(29)0000000" class="tp-phone-btn d-none d-xl-block"><i class="fa-thin fa-phone"></i>+375 (29) 000 00 00<span></span></a>
                            <a href="contact.html" class="tp-btn br-0">
                               <span>Записаться на курсы прямо сейчас <i class="fa-regular fa-arrow-right"></i> </span>
                               <div class="transition"></div>
