add blog.html, blog-details.html, add service.py for parse blog posts, change index.html, add media settings

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -94,7 +94,7 @@
                                  </ul>
                               </li>
                               <li>
-                                 <a href="blog.html">Блог</a>
+                                 <a href="{% url 'blog' %}">Блог</a>
                               </li>
                               <li>
                                  <a href="contact.html">Контакты</a>
