Changed the random function for index.html Added about-us.html, contact.html and views functions for them

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -78,10 +78,10 @@
                         <nav id="mobile-menu">
                            <ul>
                               <li>
-                                 <a href="index.html">Главная страница</a>
+                                 <a href="{% url 'index' %}">Главная страница</a>
                               </li>
                               <li>
-                                 <a href="#">О нас</a>
+                                 <a href="{% url 'about' %}">О нас</a>
                               </li>
                               <li class="has-dropdown">
                                  <a href="course.html">Курсы</a>
@@ -97,7 +97,7 @@
                                  <a href="{% url 'blog' %}">Блог</a>
                               </li>
                               <li>
-                                 <a href="contact.html">Контакты</a>
+                                 <a href="{% url 'contact' %}">Контакты</a>
                               </li>
                            </ul>
                         </nav>
