--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -94,54 +94,55 @@
 
 <!-- about section  start -->
 <div class="tp-about__section pt-120 pb-90">
-   <div class="container">
-      <div class="row align-items-center">
-         <div class="col-lg-7">
-            <div class="tp-about__img-wrapper d-md-flex p-relative">
-               <div class="tp-about__img-large w-img mb-30">
-                  <img src="{% static 'main/img/about/about-1.jpg' %}" alt="">
-               </div>
-               <div class="tp-about__img-sm w-img mb-30">
-                  <img src="{% static 'main/img/about/about-2.jpg' %}" alt="">
-               </div>
+<div class="container">
+   <div class="row align-items-center">
+      <div class="col-lg-7">
+         <div class="tp-about__img-wrapper d-md-flex p-relative">
+            <div class="tp-about__img-large w-img mb-30">
+               <img src="{% static 'main/img/about/about-1.png' %}" alt="">
+            </div>
+            <div class="tp-about__img-sm w-img mb-30">
+               <img src="{% static 'main/img/about/about-2.png' %}" alt="">
+            </div>
 
-               <div class="tp-about-shapes">
-                  <div class="tp-about__shapes-1">
-                     <img src="{% static 'main/img/icons/about-shapes.png' %}" alt="">
-                     <div class="tp-about__shapes-2 ">
-                        <img src="{% static 'main/img/icons/ring-shape.png' %}" alt="">
-                     </div>
+            <div class="tp-about-shapes">
+               <div class="tp-about__shapes-1">
+                  <img src="{% static 'main/img/icons/about-shapes.png' %}" alt="">
+                  <div class="tp-about__shapes-2 ">
+                     <img src="{% static 'main/img/icons/ring-shape.png' %}" alt="">
                   </div>
                </div>
             </div>
          </div>
-         <div class="col-lg-5">
-            <div class="tp-section__title-wrapper">
-               <h3 class="tp-section__title mb-15">Benefit From Our <br>
-                  Online Learning Experties
-                  Earn professional.</h3>
-               <p class="mb-40">Lorem ipsum dolor sit amet, consectetur aliqua adipiscing
-                  elit, sed do eiumod tempor.</p>
+      </div>
+      <div class="col-lg-5">
+         <div class="tp-section__title-wrapper">
+            <h3 class="tp-section__title mb-15">Научим<br>
+               программировать и
+               поможем стать ITшником.</h3>
+            <p class="mb-40">ITSchool - это школа программирования, где мы научим тебя
+               востребованным сегодня знаниям. Все наши программы составлены Senior и
+               Lead разработчиками ведущих IT компаний специально для новичков в IT.</p>
 
-               <div class="tp-about__feature-list mb-40">
-                  <ul>
-                     <li><span><i class="icon_check"></i></span>Upskill your organization.</li>
-                     <li><span><i class="icon_check"></i></span>Access more then 100K online courses</li>
-                     <li><span><i class="icon_check"></i></span>Access more then 1M online Video</li>
-                  </ul>
-               </div>
-               <div class="tp-hero__btn-wrappper">
-                  <a href="about-us.html" class="tp-border-btn br-0">
-                     <span>Get Started</span>
-                     <div class="transition"></div>
-                  </a>
-               </div>
+            <div class="tp-about__feature-list mb-40">
+               <ul>
+                  <li><span><i class="icon_check"></i></span>Менторы. Специалисты международных компаний вроде Andersen, Netcracker, iTechArt или SaM Solutions</li>
+                  <li><span><i class="icon_check"></i></span>Программы. Ориентированы на получение практических умений для поиска работы в первые месяцы после окончания обучения</li>
+                  <li><span><i class="icon_check"></i></span>Открытые уроки и бесплатные мастер-классы. Отличная возможность для проверки своей мотивации</li>
+               </ul>
+            </div>
+            <div class="tp-hero__btn-wrappper">
+               <a href="about-us.html" class="tp-border-btn br-0">
+                  <span>Начать</span>
+                  <div class="transition"></div>
+               </a>
             </div>
          </div>
-
       </div>
 
    </div>
+
+</div>
 </div>
 <!-- about section end  -->
 
@@ -196,9 +197,9 @@
                         </div>
                         <div class="tp-courses__content">
                            <div class="tp-courses__meta">
-                              <span class="tp-ratting"><i class="icon_star_alt"></i> 4.5 (100)</span>
-                              <span><i class="icon_heart_alt"></i>1800</span>
-                              <span><i class="fa-light fa-user"></i>325</span>
+                              <span class="tp-ratting"><i class="icon_star_alt"></i>{{ course.random_rating }} ({{ course.random_stars }})</span>
+                              <span><i class="icon_heart_alt"></i>{{ course.random_likes }}</span>
+                              <span><i class="fa-light fa-user"></i>{{ course.random_peoples }}</span>
                            </div>
                            <h3 class="tp-courses__title"><a href="{% url 'course-detail' course.id %}">{{ course.title }}</a></h3>
                            <div class="tp-courses__price d-flex justify-content-between">
