add login.html, fix create_fake_generate.py

--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -34,7 +34,7 @@
        <div class="col-xxl-7 col-xl-7 col-lg-6">
           <div class="contact__wrapper">
              <div class="section__title-wrapper mb-40">
-                <h2 class="section__title">Свяжитесь<span class="yellow-bg yellow-bg-big">с нами<img src="{% static 'main/img/shape/yellow-bg.png' %}" alt=""></span></h2>
+                <h2 class="section__title">Свяжитесь с нами<img src="{% static 'main/img/shape/yellow-bg.png' %}" alt=""></h2>
                 <p>Есть вопрос или просто хотите поздороваться? Мы будем рады услышать вас.</p>
              </div>
              <div class="contact__form mb-30">
