--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -69,7 +69,7 @@
                   <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-6 col-6">
                      <div class="logo has-border">
                         <a href="index.html">
-                           <img src="{% static 'main/img/logo/white-logo.png' %}" alt="logo">
+                           <img src="{% static 'main/img/logo/white-logo-2.png' %}" alt="logo">
                         </a>
                      </div>
                   </div>
@@ -106,11 +106,18 @@
                   <div class="col-xxl-4 col-xl-4 col-lg-3 col-md-6 col-6">
                      <div class="tp-header__main-right d-flex justify-content-end align-items-center pl-30">
                         <div class="header-acttion-btns d-flex align-items-center d-none d-md-flex">
-                           <a href="tel:+375(29)0000000" class="tp-phone-btn d-none d-xl-block"><i class="fa-thin fa-phone"></i>+375 (29) 000 00 00<span></span></a>
-                           <a href="contact.html" class="tp-btn br-0">
+                           {% if user.is_authenticated %}
+                           <a href="#" class="tp-btn br-0"><span>Личный кабинет</span></a>
+                           {% if user.is_staff %}
+                           <a href="{% url 'after_login' %}" class="tp-btn br-0"><span>Управление школой</span></a>
+                           {% endif %}
+                           {% else %}
+                           <a href="tel:+375(29)0000000" class="tp-phone-btn d-none d-xl-block"><i class="fa-thin fa-phone"></i>+375(29) 000 00 00<span></span></a>
+                           <a href="{% url 'login' %}" class="tp-btn br-0">
                               <span>Записаться на курсы прямо сейчас <i class="fa-regular fa-arrow-right"></i> </span>
                               <div class="transition"></div>
                            </a>
+                           {% endif %}
                         </div>
                         <div class="tp-header__hamburger ml-50 d-lg-none">
                            <button class="hamburger-btn offcanvas-open-btn">
@@ -137,7 +144,7 @@
                <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6">
                   <div class="footer__widget mb-50 footer-col-1">
                      <div class="footer__widget-logo mb-30">
-                       <a href="index.html"><img src="{% static 'main/img/logo/logo.png' %}" alt=""></a>
+                       <a href="index.html"><img src="{% static 'main/img/logo/logo-1.png' %}" alt=""></a>
                      </div>
                      <div class="footer__widget-content">
                         <p>Подписывайся и следи за
@@ -205,7 +212,7 @@
             <div class="row">
                <div class="col-12">
                   <div class="footer__copyright text-center">
-                     <p> © 2025 ITSchool, All Rights Reserved. Design By <a href="https://themeforest.net/user/theme_pure/portfolio" target="_blank">Theme Pure</a></p>
+                     <p> © 2025 ITSchool, Все права защищены.
                   </div>
                </div>
             </div>
