change models.py: add model CustomUser and del models Student and Teacher, add login.html, logout.html, manager-account.html, del all forms

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -17,7 +17,7 @@
                <p class="text-white mb-45">Представляем Академию — техническую школу будущего.</p>
                <div class="tp-hero__btn-wrappper d-md-flex align-items-center">
                   <div class="hero-btn-1 mr-20 p-relative z-index-1">
-                     <a href="course.html" class="tp-btn br-0">
+                     <a href="#" class="tp-btn br-0">
                         <span>Выбрать курс</span>
                         <div class="transition"></div>
                      </a>
@@ -132,7 +132,7 @@
                </ul>
             </div>
             <div class="tp-hero__btn-wrappper">
-               <a href="about-us.html" class="tp-border-btn br-0">
+               <a href="#" class="tp-border-btn br-0">
                   <span>Начать</span>
                   <div class="transition"></div>
                </a>
