--- a/main/templates/main/about-us.html
+++ b/main/templates/main/about-us.html
@@ -66,7 +66,7 @@
                   </ul>
                </div>
                <div class="tp-hero__btn-wrappper">
-                  <a href="about-us.html" class="tp-border-btn br-0">
+                  <a href="#" class="tp-border-btn br-0">
                      <span>Начать</span>
                      <div class="transition"></div>
                   </a>
