--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -99,6 +99,9 @@
                               <li>
                                  <a href="{% url 'contact' %}">Контакты</a>
                               </li>
+                              <li>
+                                 <a href="{% url 'logout' %}">Выход</a>
+                              </li>
                            </ul>
                         </nav>
                      </div>
@@ -108,16 +111,16 @@
                         <div class="header-acttion-btns d-flex align-items-center d-none d-md-flex">
                            {% if user.is_authenticated %}
                            <a href="#" class="tp-btn br-0"><span>Личный кабинет</span></a>
-                           {% if user.is_staff %}
-                           <a href="{% url 'after_login' %}" class="tp-btn br-0"><span>Управление школой</span></a>
+                           {% if user.is_manager %}
+                           <a href="{% url 'manager' %}" class="tp-btn br-0"><span>Управление школой</span></a>
                            {% endif %}
                            {% else %}
                            <a href="tel:+375(29)0000000" class="tp-phone-btn d-none d-xl-block"><i class="fa-thin fa-phone"></i>+375(29) 000 00 00<span></span></a>
                            <a href="{% url 'login' %}" class="tp-btn br-0">
                               <span>Записаться на курсы прямо сейчас <i class="fa-regular fa-arrow-right"></i> </span>
                               <div class="transition"></div>
-                           </a>
                            {% endif %}
+                           </a>
                         </div>
                         <div class="tp-header__hamburger ml-50 d-lg-none">
                            <button class="hamburger-btn offcanvas-open-btn">
