--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -216,7 +216,7 @@
                   {% endfor %}
                </div>
             </div>
-            <div class="tab-pane fade show active" id="pills-frontend" role="tabpanel" aria-labelledby="pills-all-tab">
+            <div class="tab-pane fade" id="pills-frontend" role="tabpanel" aria-labelledby="pills-all-tab">
                <div class="row">
                   {% for course in courses %}
                      {% if course.skill == "frontend" %}
@@ -248,7 +248,7 @@
                   {% endfor %}
                </div>
             </div>
-            <div class="tab-pane fade show active" id="pills-backend" role="tabpanel" aria-labelledby="pills-all-tab">
+            <div class="tab-pane fade" id="pills-backend" role="tabpanel" aria-labelledby="pills-all-tab">
                <div class="row">
                   {% for course in courses %}
                      {% if course.skill == "backend" %}
@@ -280,7 +280,7 @@
                   {% endfor %}
                </div>
             </div>
-            <div class="tab-pane fade show active" id="pills-devops" role="tabpanel" aria-labelledby="pills-all-tab">
+            <div class="tab-pane fade" id="pills-devops" role="tabpanel" aria-labelledby="pills-all-tab">
                <div class="row">
                   {% for course in courses %}
                      {% if course.skill == "devops" %}
