--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -39,7 +39,7 @@
                <div class="col-xxl-8 offset-xxl-2 col-xl-8 offset-xl-2">
                   <div class="tp-section__title-wrapper text-center mb-55">
                      <h2 class="tp-section__title">Войдите <br> для выбора курса.</h2>
-                     <p><a href="#">Или зарегистрируйтесь здесь, если еще нет аккаунта.</a></p>
+                     <p><a href="{% url 'register' %}">Или зарегистрируйтесь здесь, если еще нет аккаунта.</a></p>
                   </div>
                </div>
             </div>
