add personal-account.html, add image field in models CustomUser and Course, fix create_fake_generate.py and del other fake generators, fix registration.html, index.html, base.html

--- a/main/templates/main/blog-details.html
+++ b/main/templates/main/blog-details.html
@@ -14,6 +14,7 @@
             <div class="row">
                <div class="col-xxl-12">
                   <div class="breadcrumb__content p-relative z-index-1">
+                     <h3 class="breadcrumb__title">Детали блога</h3>
                      <div class="breadcrumb__list">
                         <span><a href="{% url 'index' %}">Главная страница</a></span>
                         <span class="dvdr"><i class="fa-regular fa-angle-right"></i></span>
