--- a/main/templates/main/logout.html
+++ b/main/templates/main/logout.html
@@ -40,7 +40,7 @@
                   <div class="tp-section__title-wrapper text-center mb-55">
                      <h2 class="tp-section__title">Вы вышли из аккаунта.</h2>
                      <p><a href="{% url 'login' %}">Войти заново.</a></p>
-                     <p><a href="#">Или зарегистрируйтесь здесь.</a></p>
+                     <p><a href="{% url 'register' %}">Или зарегистрируйтесь здесь.</a></p>
                   </div>
                </div>
             </div>
