--- a/main/templates/main/manager-account.html
+++ b/main/templates/main/manager-account.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %}
 
-{% block title %}Вход в личный кабинет{% endblock %}
+{% block title %}Управление школой{% endblock %}
 
 {% block content %}
 {% load static %}
