--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -81,7 +81,7 @@
                                  <a href="{% url 'index' %}">Главная страница</a>
                               </li>
                               <li>
-                                 <a href="course.html">Курсы</a>
+                                 <a href="{% url 'courses' %}">Курсы</a>
                               </li>
                               <li>
                                  <a href="{% url 'blog' %}">Блог</a>
@@ -104,7 +104,7 @@
                      <div class="tp-header__main-right d-flex justify-content-end align-items-center pl-30">
                         <div class="header-acttion-btns d-flex align-items-center d-none d-md-flex">
                            {% if user.is_authenticated %}
-                           <a href="#" class="tp-btn br-0"><span>Личный кабинет</span></a>
+                           <a href="{% url 'profile' %}" class="tp-btn br-0"><span>Личный кабинет</span></a>
                            {% if user.is_manager %}
                            <a href="{% url 'manager' %}" class="tp-btn br-0"><span>Управление школой</span></a>
                            {% endif %}
@@ -160,10 +160,9 @@
                      <h3 class="footer__widget-title">Информация</h3>
                      <div class="footer__widget-content">
                         <ul>
-                           <li><a href="#">О нас</a></li>
-                           <li><a href="#">Карьера</a></li>
-                           <li><a href="#">Клиент</a></li>
-                           <li><a href="#">Конфиденциальность</a></li>
+                           <li><a href="{% url 'about' %}">О нас</a></li>
+                           <li><a href="{% url 'blog' %}">Блог</a></li>
+                           <li><a href="{% url 'contact' %}">Контакты</a></li>
                            <li><a href="#">Сервис</a></li>
                         </ul>
                      </div>
