--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -12,6 +12,7 @@
          <div class="row">
             <div class="col-xxl-12">
                <div class="breadcrumb__content p-relative z-index-1">
+                  <h3 class="breadcrumb__title">Блог</h3>
                   <div class="breadcrumb__list">
                      <span><a href="{% url 'index' %}">Главная страница</a></span>
                      <span class="dvdr"><i class="fa-regular fa-angle-right"></i></span>
